# wheatr

./: .gitignore  Cargo.toml  readme.md
__docs__/: weather-app.drawio  wheatr.drawio
public/: index.css  index.html  index.js
src/: main.rs
src/calculators/: location_data_calculations.rs  mod.rs
src/connectors/: aemet_connector.rs  db_writer.rs  downloader.rs  mod.rs  sqlite_connector.rs
src/met/: mod.rs
