[package]
name = "wheatr-server"
version = "0.1.0"
edition = "2021"

[dependencies]
async-std = { version="1.12.0", features = ["attributes"] }
clokwerk = "0.4.0"
encoding_rs = "0.8.32"
encoding_rs_io = "0.1.7"
reqwest = { version="0.11.20", features = ["blocking", "json", "stream"] }
rusqlite = { version = "0.29.0", features = ["bundled"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
tide = "0.16.0"
